kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-service
  namespace: uptime-dev
spec:
  selector:
    app: uptime-app
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
